--- a/CDC_covid_data.ipynb
+++ b/CDC_covid_data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CDC_covid_data",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9dvcG8COtufAC0teHUKky",
+      "authorship_tag": "ABX9TyPdF/1VsvpdkF44chXPPSO8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,9 +101,76 @@
         "id": "4HnK7O4Yijvk"
       },
       "source": [
-        ""
+        "df_pop = pd.read_excel('/content/drive/MyDrive/group_9/Datasets/COVID_related/NST-EST2020.xlsx', skiprows=3, usecols=\"A,O\", nrows=58)"
       ],
-      "execution_count": null,
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U4FVpLTvk6xb"
+      },
+      "source": [
+        "state_abbrev_dict= {\n",
+        "    \"AL\": \"Alabama\",\n",
+        "    \"AK\": \"Alaska\",\n",
+        "    \"AZ\": \"Arizona\",\n",
+        "    \"AR\": \"Arkansas\",\n",
+        "    \"CA\": \"California\",\n",
+        "    \"CO\": \"Colorado\",\n",
+        "    \"CT\": \"Connecticut\",\n",
+        "    \"DE\": \"Delaware\",\n",
+        "    \"FL\": \"Florida\",\n",
+        "    \"GA\": \"Georgia\",\n",
+        "    \"HI\": \"Hawaii\",\n",
+        "    \"ID\": \"Idaho\",\n",
+        "    \"IL\": \"Illinois\",\n",
+        "    \"IN\": \"Indiana\",\n",
+        "    \"IA\": \"Iowa\",\n",
+        "    \"KS\": \"Kansas\",\n",
+        "    \"KY\": \"Kentucky\",\n",
+        "    \"LA\": \"Louisiana\",\n",
+        "    \"ME\": \"Maine\",\n",
+        "    \"MD\": \"Maryland\",\n",
+        "    \"MA\": \"Massachusetts\",\n",
+        "    \"MI\": \"Michigan\",\n",
+        "    \"MN\": \"Minnesota\",\n",
+        "    \"MS\": \"Mississippi\",\n",
+        "    \"MO\": \"Missouri\",\n",
+        "    \"MT\": \"Montana\",\n",
+        "    \"NE\": \"Nebraska\",\n",
+        "    \"NV\": \"Nevada\",\n",
+        "    \"NH\": \"New Hampshire\",\n",
+        "    \"NJ\": \"New Jersey\",\n",
+        "    \"NM\": \"New Mexico\",\n",
+        "    \"NY\": \"New York\",\n",
+        "    \"NC\": \"North Carolina\",\n",
+        "    \"ND\": \"North Dakota\",\n",
+        "    \"OH\": \"Ohio\",\n",
+        "    \"OK\": \"Oklahoma\",\n",
+        "    \"OR\": \"Oregon\",\n",
+        "    \"PA\": \"Pennsylvania\",\n",
+        "    \"RI\": \"Rhode Island\",\n",
+        "    \"SC\": \"South Carolina\",\n",
+        "    \"SD\": \"South Dakota\",\n",
+        "    \"TN\": \"Tennessee\",\n",
+        "    \"TX\": \"Texas\",\n",
+        "    \"UT\": \"Utah\",\n",
+        "    \"VT\": \"Vermont\",\n",
+        "    \"VA\": \"Virginia\",\n",
+        "    \"WA\": \"Washington\",\n",
+        "    \"WV\": \"West Virginia\",\n",
+        "    \"WI\": \"Wisconsin\",\n",
+        "    \"WY\": \"Wyoming\",\n",
+        "}\n",
+        "\n",
+        "abbre_dict = dict((value,key) for key,value in state_abbrev_dict.items())\n",
+        "df_pop['Unnamed: 0'] = df_pop['Unnamed: 0'].astype(str).map(lambda x: x.lstrip('.'))\n",
+        "df_pop['state'] = df_pop['Unnamed: 0'].map(abbre_dict)\n",
+        "df_pop.rename(columns={'July 1':'population_size'}, inplace =True)"
+      ],
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -111,7 +178,98 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 142
+          "height": 204
+        },
+        "id": "WzRCkYe5kgT7",
+        "outputId": "0e93ac09-f0bd-4df1-d5a2-7841148b9009"
+      },
+      "source": [
+        "df_pop.tail()"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>population_size</th>\n",
+              "      <th>state</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>53</th>\n",
+              "      <td>West Virginia</td>\n",
+              "      <td>1784787.00</td>\n",
+              "      <td>WV</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>54</th>\n",
+              "      <td>Wisconsin</td>\n",
+              "      <td>5832655.00</td>\n",
+              "      <td>WI</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>55</th>\n",
+              "      <td>Wyoming</td>\n",
+              "      <td>582328.00</td>\n",
+              "      <td>WY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56</th>\n",
+              "      <td>nan</td>\n",
+              "      <td>nan</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>57</th>\n",
+              "      <td>Puerto Rico</td>\n",
+              "      <td>3159343.00</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Unnamed: 0  population_size state\n",
+              "53  West Virginia       1784787.00    WV\n",
+              "54      Wisconsin       5832655.00    WI\n",
+              "55        Wyoming        582328.00    WY\n",
+              "56            nan              nan   NaN\n",
+              "57    Puerto Rico       3159343.00   NaN"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 230
         },
         "id": "nzfIE910-fec",
         "outputId": "412809b5-cc4f-4414-8920-e3d47eb6d922"
